# tecnico-filesystem

./: CMakeLists.txt  Makefile  README.md  main.c  runTests.sh
client/: tecnicofs-client-api.c  tecnicofs-client-api.h  tecnicofs-client.c
fs/: operations.c  operations.h  state.c  state.h
inputs/: test1.txt  test10.txt  test4.txt  test7.txt  test8.txt  test9.txt
outputs/: test1.txt
